[gd_scene load_steps=2 format=3 uid="uid://game_battle_scene"]

[ext_resource type="Script" path="res://Scripts/GameBattle/game_battle.gd" id="1_battle"]

[node name="GameBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StageNameLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "關卡名稱"

[node name="DeckInfoLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "牌庫: 0"

[node name="DiscardInfoLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "棄牌堆: 0"

[node name="BattleArea" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="PlayerArea" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BattleArea"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BattleArea/PlayerArea"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "我方角色"
horizontal_alignment = 1

[node name="PlayerCharacterList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BattleArea/PlayerArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="CenterSpacer" type="Control" parent="MarginContainer/VBoxContainer/BattleArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyArea" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BattleArea"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BattleArea/EnemyArea"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "敵人"
horizontal_alignment = 1

[node name="EnemyList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BattleArea/EnemyArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="BottomArea" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ActionPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/BottomArea"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
visible = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/BottomArea/ActionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BottomArea/ActionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomArea/ActionPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "已選擇: 角色名稱 + 卡牌名稱"

[node name="AttachButton" type="Button" parent="MarginContainer/VBoxContainer/BottomArea/ActionPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "附加特徵"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/BottomArea/ActionPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "打出"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/BottomArea/ActionPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "取消"

[node name="HandCardArea" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BottomArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BottomArea/HandCardArea"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "手牌"

[node name="HandCardContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BottomArea/HandCardArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomArea/ActionPanel/MarginContainer/HBoxContainer/AttachButton" to="." method="_on_attach_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomArea/ActionPanel/MarginContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomArea/ActionPanel/MarginContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
